# django-mail-client

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  manage.py  prepare.py  pyproject.toml  tz.md
core/: asgi.py  settings.py  urls.py
core/interfaces/: __init__.py
core/utils/: add_account_cli.py  create_admin.py  format_string.py
main/: consumers.py  models.py  routing.py  services.py  tasks.py  views.py
main/static/css/: main.css
main/static/js/: main.js  websocket.js
main/templates/: accounts.html  index.html  messages.html
src/: settings.py  urls.py
src/utils/: create_admin.py
